<resources>
    <string name="app_name">My Application</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">scores app</string>
    <string name="library_app">library app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="capstone_my_own_app">capstone: My own app</string>
    <string name="capstone_app_message">This button will launch my capstone app</string>
    <string name="xyz_reader_message">This button will launch xyz reader</string>
    <string name="build_it_bigger_message">This button will launch build it bigger</string>
    <string name="library_app_message">This button will launch library app</string>
    <string name="scores_app_message">This button will launch scores app</string>
    <string name="spotify_streamer_mesage">This button will launch spotify streamer</string>
</resources>
