<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.negri.myapplication.MainActivity">


    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer"
        android:id="@+id/btn_Spotify_Streamer"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonsColor"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/btn_scores_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_below="@+id/btn_Spotify_Streamer"
        android:background="@color/buttonsColor"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/btn_library_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_below="@+id/btn_scores_app"
        android:background="@color/buttonsColor"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/btn_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_below="@+id/btn_library_app"
        android:background="@color/buttonsColor"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/btn_xyz_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_below="@+id/btn_build_it_bigger"
        android:background="@color/buttonsColor"/>

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app"
        android:id="@+id/btn_my_own_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:layout_below="@+id/btn_xyz_reader"
        android:background="@color/redColor"/>
</RelativeLayout>
